# Respiratory_Disease_Classifier_API

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  model_utils.py  pyproject.toml  respiratory_classifier.pkl  respiratory_classifier_nocopd.pkl  respiratory_disease.ipynb
app/: cache.py  config.py  dependencies.py  metrics.py  schemas.py
app/routers/: admin.py  drugs.py  health.py  heart.py  lab.py  predict.py  report.py  scan.py  symptoms.py
static/: dashboard.html
