[project]
name = "respiratory-classifier-api"
version = "2.0.0"
description = "FastAPI server for respiratory disease audio classification using a pre-trained Random Forest model."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "librosa>=0.10.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "python-multipart>=0.0.9",
    "groq>=0.12.0",
    "pydantic-settings>=2.2.0",
]

[tool.uv]
dev-dependencies = []
